build: update dist assets and localization files

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -111,7 +111,7 @@
       "market": "The online gambling industry",
       "movement": {
         "title": "We Are a Movement",
-        "description": "We're not \"just another startup.\" We founded Wintuition as an independent laboratory with headquarters and data center in Switzerland, away from corporate influence. We are a movement to give ordinary people access to extraordinary computational power."
+        "description": "We're not \"just another startup.\" We founded flamingo.ai as an independent laboratory with headquarters and data center in Switzerland, away from corporate influence. We are a movement to give ordinary people access to extraordinary computational power."
       }
     },
     "architecture": {
@@ -135,7 +135,7 @@
     "process": {
       "title1": "From Spin Chaos to",
       "title2": "Quantum Precision",
-      "subtitle": "How Wintuition transforms pseudo-randomness into predictable probability through our four-level analytical process",
+      "subtitle": "How flamingo.ai transforms pseudo-randomness into predictable probability through our four-level analytical process",
       "level1": {
         "title": "Statistical Profiling",
         "subtitle": "Our Data Lake",
@@ -211,11 +211,11 @@
       "title2": "ghosts in the machine",
       "title3": "And that's our strength",
       "subtitle": "A frequent question we receive: \"Who are you?\"",
-      "intro": "We are the architects of Wintuition. We are the quantum physicist who previously modeled market volatility for hedge funds. We are the SaaS architect who built high-load cloud platforms for tech giants. We are the data specialist whose algorithms analyzed petabytes of information for global logistics companies.",
+      "intro": "We are the architects of flamingo.ai. We are the quantum physicist who previously modeled market volatility for hedge funds. We are the SaaS architect who built high-load cloud platforms for tech giants. We are the data specialist whose algorithms analyzed petabytes of information for global logistics companies.",
       "butNever": "But you will never see our faces or know our names. And there are three compelling reasons for this.",
       "reason1": {
         "title": "Professional Obligations and Non-Disclosure Agreements (NDAs)",
-        "description": "Many of us left positions at the world's leading corporations to create Wintuition. We are still bound by the strictest non-disclosure agreements. Revealing our identities would immediately lead to lawsuits capable of destroying our project before it takes off. Our anonymity is a legal necessity, protecting not only us but the very existence of Wintuition."
+        "description": "Many of us left positions at the world's leading corporations to create flamingo.ai. We are still bound by the strictest non-disclosure agreements. Revealing our identities would immediately lead to lawsuits capable of destroying our project before it takes off. Our anonymity is a legal necessity, protecting not only us but the very existence of flamingo.ai."
       },
       "reason2": {
         "title": "The Nature of the Industry We've Challenged",
@@ -223,7 +223,7 @@
       },
       "reason3": {
         "title": "Project Philosophy: Focus on Results, Not Personalities",
-        "description": "We didn't create Wintuition for personal glory. Like Bitcoin's creator Satoshi Nakamoto, we believe that technology and its value should speak for themselves. At the center of this project is you, our user, not us. Our goal is to give you a tool, not to build a cult of personality around the developers. Our egos stayed at the door the day we founded this project."
+        "description": "We didn't create flamingo.ai for personal glory. Like Bitcoin's creator Satoshi Nakamoto, we believe that technology and its value should speak for themselves. At the center of this project is you, our user, not us. Our goal is to give you a tool, not to build a cult of personality around the developers. Our egos stayed at the door the day we founded this project."
       },
       "whoWeAre": {
         "title": "So who are we?",
@@ -250,7 +250,7 @@
       "title2": "Computational Power",
       "title3": "That Was",
       "title4": "Science Fiction Yesterday",
-      "description": "Wintuition is your personal access to quantum advantage. Join thousands who now have a real, mathematically grounded chance against the opaque algorithms of casinos.",
+      "description": "flamingo.ai is your personal access to quantum advantage. Join thousands who now have a real, mathematically grounded chance against the opaque algorithms of casinos.",
       "button1": "Start Your Quantum Advantage",
       "button2": "Explore the Technology"
     }
