--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -111,7 +111,7 @@
       "market": "Индустрия онлайн-гемблинга",
       "movement": {
         "title": "Мы - движение",
-        "description": "Мы не \"просто очередной стартап\". Мы основали Wintuition как независимую лабораторию со штаб-квартирой и дата-центром в Швейцарии, вдали от корпоративного влияния. Мы - движение, чтобы дать обычным людям доступ к экстраординарной вычислительной мощности."
+        "description": "Мы не \"просто очередной стартап\". Мы основали flamingo.ai как независимую лабораторию со штаб-квартирой и дата-центром в Швейцарии, вдали от корпоративного влияния. Мы - движение, чтобы дать обычным людям доступ к экстраординарной вычислительной мощности."
       }
     },
     "architecture": {
@@ -135,7 +135,7 @@
     "process": {
       "title1": "От хаоса вращений к",
       "title2": "Квантовой точности",
-      "subtitle": "Как Wintuition превращает псевдослучайность в предсказуемую вероятность через наш четырехуровневый аналитический процесс",
+      "subtitle": "Как flamingo.ai превращает псевдослучайность в предсказуемую вероятность через наш четырехуровневый аналитический процесс",
       "level1": {
         "title": "Статистическое профилирование",
         "subtitle": "Наше озеро данных",
@@ -211,11 +211,11 @@
       "title2": "призраки в машине",
       "title3": "И это наша сила",
       "subtitle": "Частый вопрос, который мы получаем: «Кто вы?»",
-      "intro": "Мы архитекторы Wintuition. Мы квантовый физик, который ранее моделировал волатильность рынка для хедж-фондов. Мы SaaS-архитектор, который строил высоконагруженные облачные платформы для технологических гигантов. Мы специалист по данным, чьи алгоритмы анализировали петабайты информации для глобальных логистических компаний.",
+      "intro": "Мы архитекторы flamingo.ai. Мы квантовый физик, который ранее моделировал волатильность рынка для хедж-фондов. Мы SaaS-архитектор, который строил высоконагруженные облачные платформы для технологических гигантов. Мы специалист по данным, чьи алгоритмы анализировали петабайты информации для глобальных логистических компаний.",
       "butNever": "Но вы никогда не увидите наших лиц и не узнаете наших имен. И для этого есть три веские причины.",
       "reason1": {
         "title": "Профессиональные обязательства и соглашения о неразглашении (NDA)",
-        "description": "Многие из нас оставили должности в ведущих мировых корпорациях, чтобы создать Wintuition. Мы все еще связаны строжайшими соглашениями о неразглашении. Раскрытие нашей личности немедленно приведет к судебным искам, способным уничтожить наш проект до его взлета. Наша анонимность - это юридическая необходимость, защищающая не только нас, но и само существование Wintuition."
+        "description": "Многие из нас оставили должности в ведущих мировых корпорациях, чтобы создать flamingo.ai. Мы все еще связаны строжайшими соглашениями о неразглашении. Раскрытие нашей личности немедленно приведет к судебным искам, способным уничтожить наш проект до его взлета. Наша анонимность - это юридическая необходимость, защищающая не только нас, но и само существование flamingo.ai."
       },
       "reason2": {
         "title": "Природа индустрии, которой мы бросили вызов",
@@ -223,7 +223,7 @@
       },
       "reason3": {
         "title": "Философия проекта: фокус на результатах, а не на личностях",
-        "description": "Мы создали Wintuition не ради личной славы. Как и создатель Bitcoin Сатоши Накамото, мы верим, что технология и ее ценность должны говорить сами за себя. В центре этого проекта вы, наш пользователь, а не мы. Наша цель - дать вам инструмент, а не построить культ личности вокруг разработчиков. Наше эго осталось за дверью в день основания этого проекта."
+        "description": "Мы создали flamingo.ai не ради личной славы. Как и создатель Bitcoin Сатоши Накамото, мы верим, что технология и ее ценность должны говорить сами за себя. В центре этого проекта вы, наш пользователь, а не мы. Наша цель - дать вам инструмент, а не построить культ личности вокруг разработчиков. Наше эго осталось за дверью в день основания этого проекта."
       },
       "whoWeAre": {
         "title": "Так кто же мы?",
@@ -250,7 +250,7 @@
       "title2": "Вычислительной мощности",
       "title3": "Которая вчера была",
       "title4": "Научной фантастикой",
-      "description": "Wintuition - это ваш личный доступ к квантовому преимуществу. Присоединяйтесь к тысячам, у которых теперь есть реальный, математически обоснованный шанс против непрозрачных алгоритмов казино.",
+      "description": "flamingo.ai - это ваш личный доступ к квантовому преимуществу. Присоединяйтесь к тысячам, у которых теперь есть реальный, математически обоснованный шанс против непрозрачных алгоритмов казино.",
       "button1": "Начните свое квантовое преимущество",
       "button2": "Изучить технологию"
     }
